--- a/src/components/authLinks/authLinks.module.css
+++ b/src/components/authLinks/authLinks.module.css
@@ -1,3 +1,66 @@
 .link{
   cursor: pointer;
 }
+
+.burger{
+  width: 20px;
+  height: 16px;
+  display: none;
+  flex-direction: column;;
+  justify-content: space-between;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.times{
+  margin-top: -5px;
+}
+
+.line{
+  width: 100%;
+  height: 2px;
+  background-color: var(--textColor);
+}
+
+
+.menuItems{
+  position: absolute;
+  top: 25px;
+  left: 0;
+  width: 100%;
+  height: calc(100vh - 100px);
+  background-color: var(--bg);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  font-size: 36px;
+}
+
+.pairItems{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.pairItem{
+  cursor: pointer;
+  
+}
+
+.menuItem:hover{
+  font-size: 24px;
+  transition:all 1s repeat;
+}
+
+
+@media screen and (max-width: 640px) {
+  .burger{
+    display: flex;
+  }
+
+  .link{
+    display: none;
+  }
+}
