--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,27 +1,84 @@
-.container{
+.container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 5rem;
 }
 
-.social{
+.social {
   display: flex;
   align-items: center;
-  gap: .6rem;
+  gap: 0.6rem;
   flex: 1;
 }
 
-.logo{
+.logo {
   flex: 1;
   text-align: center;
   font-weight: bold;
-  font-size: 24px;
+  font-size: 36px;
 }
 
-.links{
+.mobilelogo {
+  display: none;
+}
+
+.links {
   display: flex;
   gap: 20px;
   flex: 1;
+  display: flex;
+  align-items: center;
+  font-size: 20;
 }
 
+@media screen and (max-width: 1280px) {
+  .logo {
+    font-size: 32px;
+  }
+
+  .links {
+    font-size: 20px;
+    gap: 15px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .social {
+    display: none;
+  }
+
+  .logo {
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .logo {
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .links {
+    justify-content: flex-end;
+  }
+
+  .link {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .logo {
+    display: none;
+  }
+
+  .mobilelogo {
+    display: block;
+    flex: 1;
+    text-align: left;
+    font-weight: bold;
+    font-size: 24px;
+  }
+}
